--- a/studentapp/src/App.css
+++ b/studentapp/src/App.css
@@ -1,38 +1,30 @@
 .App {
   text-align: center;
+  background-color: rgb(208, 248, 255);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.score{
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+h1{
+  margin-top: 0;
+  padding: 20px;
+  color: red;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h2{
+  color:#007eff;
+}
+
+p{
+  margin: 20px;
+}
+
+.student{
+  border: 5px inset gray;
+  margin: 10px;
+  padding:20px;
 }
