--- a/movieapp/src/App.css
+++ b/movieapp/src/App.css
@@ -1,13 +1,10 @@
 .App {
   text-align: center;
-}
-
-.title{
-  color:coral;
+  background-color: rgba(0, 0, 0, 0.911);
 }
 
 .movieDisplay{
-  background-color: #4f40a7
+  background-color: #4f40a7ec
 }
 
 img{
